@@ -54,8 +54,8 @@ def main(argv=sys.argv):
 def build_main(argv=sys.argv):
     """Sphinx build "main" command-line entry."""
     if (sys.version_info[:3] < (2, 6, 0) or
-       (3, 0, 0) <= sys.version_info[:3] < (3, 3, 0)):
-        sys.stderr.write('Error: Sphinx requires at least Python 2.6 or 3.3 to run.\n')
+       (3, 0, 0) <= sys.version_info[:3] < (3, 4, 0)):
+        sys.stderr.write('Error: Sphinx requires at least Python 2.6 or 3.4 to run.\n')
         return 1
     try:
         from sphinx import cmdline
