@@ -1,5 +1,5 @@
 [tox]
-envlist=flake8,py26,py27,py33,py34,py35,pypy,du12,du11,du10
+envlist=flake8,py26,py27,py34,py35,pypy,du12,du11,du10
 
 [testenv]
 deps=
